--- a/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -69,14 +69,11 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-edit"></i> Quản lý Biểu Mẫu <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-edit"></i> Quản lý Kết Nối <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="form.html">General Form</a></li>
-                                        <li><a href="form_advanced.html">Advanced Components</a></li>
-                                        <li><a href="form_validation.html">Form Validation</a></li>
-                                        <li><a href="form_wizards.html">Form Wizard</a></li>
-                                        <li><a href="form_upload.html">Form Upload</a></li>
-                                        <li><a href="form_buttons.html">Form Buttons</a></li>
+                                        <li><a href="@Url.Action("Index", "ContactForms")">Đặt lịch qua Website</a></li>
+                                        <li><a href="@Url.Action("Index", "Appointments")">Đặt lịch qua Bác sĩ</a></li>
+                                    
                                     </ul>
                                 </li>
                                 <li>
@@ -87,25 +84,26 @@
                                         <li><a href="@Url.Action("Index", "Services")">Trang dịch vụ</a></li>
                                         <li><a href="@Url.Action("Index", "BlogPosts")">Trang bài viết</a></li>
                                         <li><a href="@Url.Action("Index", "Products")">Trang sản phẩm</a></li>
-                                        <li><a href="widgets.html">Widgets</a></li>
+                                        <li><a href="widgets.html">Trang khuyễn mãi</a></li>
                                         <li><a href="invoice.html">Invoice</a></li>
-                                        <li><a href="inbox.html">Inbox</a></li>
-                                        <li><a href="calendar.html">Calendar</a></li>
+                                       
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-table"></i> Quản lý Dữ liệu <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-table"></i> Quản lý Danh Mục <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="tables.html">Tables</a></li>
-                                        <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                                        <li><a href="tables.html">Danh mục dịch vụ</a></li>
+                                        <li><a href="tables_dynamic.html">Danh mục tin tức</a></li>
+                                        <li><a href="tables_dynamic.html">Danh mục sản phẩm</a></li>
+                                        <li><a href="tables_dynamic.html">Danh mục bác sĩ</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-bar-chart-o"></i> Quản lý Bảng <span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-bar-chart-o"></i> Quản lý Bình Luận <span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="chartjs.html">Chart JS</a></li>
-                                        <li><a href="chartjs2.html">Chart JS2</a></li>
-                                        <li><a href="morisjs.html">Moris JS</a></li>
+                                        <li><a href="@Url.Action("Index", "CustomerReviews")">Reviews từ Khách Hàng</a></li>
+                                        <li><a href="chartjs2.html">Bình luận bài viết</a></li>
+                                        <li><a href="morisjs.html">Đánh giá Bác sĩ</a></li>
                                         <li><a href="echarts.html">ECharts</a></li>
                                         <li><a href="other_charts.html">Other Charts</a></li>
                                     </ul>
